Scrollbar fix for Linux (#64)

--- a/app/style/index.styl
+++ b/app/style/index.styl
@@ -65,6 +65,10 @@ div
   user-select none
   cursor default
 
+::-webkit-scrollbar
+  width 0px
+  background transparent
+
 #panel
   background rgba(218, 223, 234, 0.98)
   margin 5px
